<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabmenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIndicatorColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tvshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvshow" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fav_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Favorit Movie" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fav_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Favorit TV Show" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyleviefavorit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:visibility="invisible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="112dp" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_loading"
        style="@style/SpinKitView.DoubleBounce"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="invisible"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabmenu"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyleviewmenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tabmenu"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
